[project]
name = "cappy"
version = "0.1.1"
description = "Use capsh to run a program as the current user with with new capabilities"
readme = "README.md"
requires-python = ">=3.11"
repository = "https://github.com/Qyriad/cappy"

[project.scripts]
cappy = "cappy:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
