[project]
name = "cappy"
version = "0.1.1"
description = "Use capsh to run a program as the current user with with new capabilities"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
cappy = "cappy:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
